cluster/home-automation/code-server/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server
  namespace: home-automation
  labels:
    app: code-server
spec:
  selector:
    matchLabels:
      app: code-server
      tier: code-server
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: code-server
        tier: code-server
    spec:
      containers:
        - image: registry.komhem.xyz/docker/code-server:1.0.4
          name: code-server
          ports:
            - containerPort: 8080
              name: code-server
          resources:
            requests:
              memory: "1024Mi"
              cpu: "1"
          livenessProbe:
            httpGet:
              path: /
              port: code-server
            initialDelaySeconds: 20
            failureThreshold: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: code-server
            initialDelaySeconds: 20
            failureThreshold: 3
            timeoutSeconds: 5
          volumeMounts:
            - name: hass-persistent-storage
              mountPath: /hass
            - name: zigbee2mqtt-persistent-storage
              mountPath: /zigbee
            - name: zwavejs-persistent-storage
              mountPath: /zwave
      volumes:
        - name: hass-persistent-storage
          persistentVolumeClaim:
            claimName: home-assistant-config
        - name: zigbee2mqtt-persistent-storage
          persistentVolumeClaim:
            claimName: zigbee2mqtt-data
        - name: zwavejs-persistent-storage
          persistentVolumeClaim:
            claimName: zwavejs-config
