cluster/home-automation/code-server/service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: code-server
  namespace: home-automation
spec:
  ports:
    - name: code-server
      port: 8080
  selector:
    app: code-server
  type: ClusterIP
