cluster/home-automation/code-server/ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: code-server
  namespace: home-automation
  annotations:
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://user-images.githubusercontent.com/674621/71187801-14e60a80-2280-11ea-94c9-e56576f76baf.png"
    forecastle.stakater.com/network-restricted: "true"
  labels:
    app.kubernetes.io/instance: code-server
    app.kubernetes.io/name: code-server
spec:
  rules:
    - host: "code.komhem.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: code-server
                port:
                  number: 8080
  tls:
    - hosts:
        - "code.komhem.xyz"
